OMP eval much faster

--- a/bot/python_skeleton/pokerbots_cpp_python/CMakeLists.txt
+++ b/bot/python_skeleton/pokerbots_cpp_python/CMakeLists.txt
@@ -3,12 +3,6 @@ cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 project(pokerbots_cpp VERSION 0.1.0 LANGUAGES CXX)
 add_compile_options(-std=c++11)
 
-# Needed to find pyconfig.h
-find_package(Boost REQUIRED COMPONENTS python)
-# include_directories(/usr/include/python3.5m/)
-include_directories(/usr/include/python2.7/)
-include_directories()
-
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -17,17 +11,44 @@ endif()
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-Ofast")
 
+# Needed to find pyconfig.h
+find_package(Boost REQUIRED COMPONENTS python)
+include_directories(/usr/include/python2.7/)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/OMPEval/)
+
+# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+set(OMP_SOURCE_FILES
+  OMPEval/omp/CardRange.cpp
+  OMPEval/omp/CardRange.h
+  OMPEval/omp/CombinedRange.cpp
+  OMPEval/omp/CombinedRange.h
+  OMPEval/omp/Constants.h
+  OMPEval/omp/EquityCalculator.cpp
+  OMPEval/omp/EquityCalculator.h
+  OMPEval/omp/Hand.h
+  OMPEval/omp/HandEvaluator.cpp
+  OMPEval/omp/HandEvaluator.h
+  OMPEval/omp/Random.h
+  OMPEval/omp/Util.h
+  OMPEval/libdivide/libdivide.h)
+add_library(ompeval SHARED
+  ${OMP_SOURCE_FILES})
+target_link_libraries(ompeval
+  pthread)
+set_target_properties(ompeval PROPERTIES LINKER_LANGUAGE CXX)
+
 add_library(${PROJECT_NAME} SHARED
   permutation_filter.cpp
   permutation_filter.hpp)
 target_link_libraries(${PROJECT_NAME}
-  ${CMAKE_CURRENT_SOURCE_DIR}/libpbots_calc.so)
-  # ${Boost_LIBRARIES})
+  ${CMAKE_CURRENT_SOURCE_DIR}/libpbots_calc.so
+  ompeval)
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 add_library(${PROJECT_NAME}_python SHARED
   bindings.cpp)
 target_link_libraries(${PROJECT_NAME}_python
+  ompeval
   ${Boost_LIBRARIES}
   ${PROJECT_NAME})
 set_target_properties(${PROJECT_NAME}_python PROPERTIES LINKER_LANGUAGE CXX)
@@ -35,7 +56,8 @@ set_target_properties(${PROJECT_NAME}_python PROPERTIES LINKER_LANGUAGE CXX)
 add_executable(main
   main.cpp)
 target_link_libraries(main
-  ${PROJECT_NAME})
+  ${PROJECT_NAME}
+  ompeval)
 set_target_properties(main PROPERTIES LINKER_LANGUAGE CXX)
 
 # configure_file(./__init__.py ${CMAKE_CURRENT_BINARY_DIR}/__init__.py COPYONLY)
