--- a/bot/python_skeleton/pokerbots_cpp_python/CMakeLists.txt
+++ b/bot/python_skeleton/pokerbots_cpp_python/CMakeLists.txt
@@ -7,33 +7,47 @@ link_directories(${CMAKE_CURRENT_SOURCE_DIR})
 link_directories(/usr/local/lib/)
 
 # Build the OMPEval library.
-set(OMP_SOURCE_FILES
-  OMPEval/omp/CardRange.cpp
-  OMPEval/omp/CardRange.h
-  OMPEval/omp/CombinedRange.cpp
-  OMPEval/omp/CombinedRange.h
-  OMPEval/omp/Constants.h
-  OMPEval/omp/EquityCalculator.cpp
-  OMPEval/omp/EquityCalculator.h
-  OMPEval/omp/Hand.h
-  OMPEval/omp/HandEvaluator.cpp
-  OMPEval/omp/HandEvaluator.h
-  OMPEval/omp/Random.h
-  OMPEval/omp/Util.h
-  OMPEval/libdivide/libdivide.h)
-add_library(ompeval SHARED
-  ${OMP_SOURCE_FILES})
-target_link_libraries(ompeval
-  pthread)
-set_target_properties(ompeval PROPERTIES LINKER_LANGUAGE CXX)
+# set(OMP_SOURCE_FILES
+#   OMPEval/omp/CardRange.cpp
+#   OMPEval/omp/CardRange.h
+#   OMPEval/omp/CombinedRange.cpp
+#   OMPEval/omp/CombinedRange.h
+#   OMPEval/omp/Constants.h
+#   OMPEval/omp/EquityCalculator.cpp
+#   OMPEval/omp/EquityCalculator.h
+#   OMPEval/omp/Hand.h
+#   OMPEval/omp/HandEvaluator.cpp
+#   OMPEval/omp/HandEvaluator.h
+#   OMPEval/omp/Random.h
+#   OMPEval/omp/Util.h
+#   OMPEval/libdivide/libdivide.h)
+# add_library(ompeval SHARED
+#   ${OMP_SOURCE_FILES})
+# target_link_libraries(ompeval
+#   pthread)
+# set_target_properties(ompeval PROPERTIES LINKER_LANGUAGE CXX)
 
 # Build the main c++ library.
 add_library(${PROJECT_NAME} SHARED
+  OMPEval/omp/CardRange.cpp
+  OMPEval/omp/CardRange.h
+  # OMPEval/omp/CombinedRange.cpp
+  # OMPEval/omp/CombinedRange.h
+  OMPEval/omp/Constants.h
+  # OMPEval/omp/EquityCalculator.cpp
+  # OMPEval/omp/EquityCalculator.h
+  OMPEval/omp/Hand.h
+  OMPEval/omp/HandEvaluator.cpp
+  OMPEval/omp/HandEvaluator.h
+  # OMPEval/omp/Random.h
+  # OMPEval/omp/Util.h
+  OMPEval/libdivide/libdivide.h
   permutation_filter.cpp
   permutation_filter.hpp)
 target_link_libraries(${PROJECT_NAME}
-  ${CMAKE_CURRENT_SOURCE_DIR}/libpbots_calc.so
-  ompeval)
+  pthread
+  ${CMAKE_CURRENT_SOURCE_DIR}/libpbots_calc.so)
+  # ompeval)
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 # Optionally build the python wrappers.
@@ -42,7 +56,8 @@ if (BUILD_PYTHON_WRAPPER)
   add_library(${PROJECT_NAME}_python SHARED
     bindings.cpp)
   target_link_libraries(${PROJECT_NAME}_python
-    ompeval
+    # ompeval
+    # pthread
     ${PROJECT_NAME}
     ${Boost_LIBRARIES})
   set_target_properties(${PROJECT_NAME}_python PROPERTIES LINKER_LANGUAGE CXX)
