--- a/bot/python_skeleton/CMakeLists.txt
+++ b/bot/python_skeleton/CMakeLists.txt
@@ -27,12 +27,14 @@ if (NOT BUILD_PYTHON_WRAPPER)
     cpp_skeleton/bot.hpp
     cpp_skeleton/runner.cpp
     cpp_skeleton/states.cpp
+    history_tracker.cpp
+    history_tracker.hpp
     player.hpp
     player.cpp
     main.cpp)
   target_link_libraries(cpp_player
     ${Boost_LIBRARIES}
-    pokerbots_cpp) 
+    pokerbots_cpp)
 
   # Copy necessary files to final executable directory.
   add_custom_command(
@@ -41,4 +43,18 @@ if (NOT BUILD_PYTHON_WRAPPER)
             ${CMAKE_SOURCE_DIR}/pokerbots_cpp_python/preflop_equity.txt
             ${CMAKE_CURRENT_BINARY_DIR}/preflop_equity.txt)
 
+  enable_testing()  
+  set(TEST_SOURCES
+    history_tracker.cpp
+    history_tracker.hpp
+    test_history_tracker.cpp)
+
+  # Make a single executable for all tests.
+  # Can use --gtest_filter option to run specific tests.
+  add_executable(run_tests ${TEST_SOURCES} ./pokerbots_cpp_python/gtest/gtest-all.cc)
+  target_link_libraries(run_tests
+    ${PROJECT_NAME}
+    pthread)
+  set_target_properties(run_tests PROPERTIES COMPILE_FLAGS "-std=c++11")
+  add_test(NAME run_tests COMMAND run_tests --gtest_color=yes)
 endif()
