--- a/bot/python_skeleton/pokerbots_cpp_python/CMakeLists.txt
+++ b/bot/python_skeleton/pokerbots_cpp_python/CMakeLists.txt
@@ -3,11 +3,11 @@ find_package(Boost REQUIRED COMPONENTS python system program_options)
 # include_directories(/usr/include/python2.7/)
 include_directories(/usr/include/python3.5/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/OMPEval/)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../cpp_skeleton)
 link_directories(${CMAKE_CURRENT_SOURCE_DIR})
 link_directories(/usr/local/lib/)
 
-# Build the main c++ library.
-add_library(${PROJECT_NAME} SHARED
+add_library(omp SHARED
   OMPEval/omp/CardRange.cpp
   OMPEval/omp/CardRange.h
   # OMPEval/omp/CombinedRange.cpp
@@ -21,14 +21,27 @@ add_library(${PROJECT_NAME} SHARED
   # OMPEval/omp/Random.h
   # OMPEval/omp/Util.h
   OMPEval/libdivide/libdivide.h
+)
+target_link_libraries(omp
+  pthread)
+set_target_properties(omp PROPERTIES LINKER_LANGUAGE CXX)
+
+add_library(${PROJECT_NAME}_cfr SHARED
+  engine_modified.cpp
+  engine_modified.hpp)
+target_link_libraries(${PROJECT_NAME}_cfr
+  omp)
+set_target_properties(${PROJECT_NAME}_cfr PROPERTIES LINKER_LANGUAGE CXX)
+
+# Build the main c++ library.
+add_library(${PROJECT_NAME} SHARED
   permutation_filter.cpp
   permutation_filter.hpp
   history_tracker.cpp
   history_tracker.hpp)
 target_link_libraries(${PROJECT_NAME}
-  pthread
+  omp
   ${CMAKE_CURRENT_SOURCE_DIR}/libpbots_calc.so)
-  # ompeval)
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 # Optionally build the python wrappers.
@@ -37,8 +50,6 @@ if (BUILD_PYTHON_WRAPPER)
   add_library(${PROJECT_NAME}_python SHARED
     bindings.cpp)
   target_link_libraries(${PROJECT_NAME}_python
-    # ompeval
-    # pthread
     ${PROJECT_NAME}
     ${Boost_LIBRARIES})
   set_target_properties(${PROJECT_NAME}_python PROPERTIES LINKER_LANGUAGE CXX)
