--- a/bot/pokerbots_cpp/CMakeLists.txt
+++ b/bot/pokerbots_cpp/CMakeLists.txt
@@ -2,7 +2,6 @@
 add_compile_options(-std=c++11)
 
 find_package(Boost REQUIRED COMPONENTS system program_options filesystem)
-# include_directories(/usr/include/python2.7/)
 include_directories(/usr/include/python3.5/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/OMPEval/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../cpp_skeleton)
@@ -26,17 +25,16 @@ add_library(omp SHARED
   # OMPEval/omp/Util.h
   OMPEval/libdivide/libdivide.h
 )
-target_link_libraries(omp
-  pthread)
+target_link_libraries(omp pthread)
 set_target_properties(omp PROPERTIES LINKER_LANGUAGE CXX)
 
+#================ CPP SKELETON LIBRARY ============
 add_library(cpp_skeleton
   ../cpp_skeleton/actions.cpp
   ../cpp_skeleton/bot.hpp
   ../cpp_skeleton/runner.cpp
   ../cpp_skeleton/states.cpp)
-target_link_libraries(cpp_skeleton
-  ${Boost_LIBRARIES})
+target_link_libraries(cpp_skeleton ${Boost_LIBRARIES})
 set_target_properties(cpp_skeleton PROPERTIES LINKER_LANGUAGE CXX)
 
 #================ CFR LIBRARY =====================
@@ -59,15 +57,15 @@ target_link_libraries(${PROJECT_NAME}_cfr
 set_target_properties(${PROJECT_NAME}_cfr PROPERTIES LINKER_LANGUAGE CXX)
 
 #================= PLAYER LIBRARY ==================
-add_library(${PROJECT_NAME} SHARED
+add_library(${PROJECT_NAME}_player SHARED
   permutation_filter.cpp
   permutation_filter.hpp
   history_tracker.cpp
   history_tracker.hpp)
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(${PROJECT_NAME}_player
   omp
   ${CMAKE_CURRENT_SOURCE_DIR}/libpbots_calc.so)
-set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
+set_target_properties(${PROJECT_NAME}_player PROPERTIES LINKER_LANGUAGE CXX)
 
 #================= CFR EXECUTABLE =================
 if(BUILD_CFR_EXECUTABLES)
@@ -122,7 +120,7 @@ if(BUILD_TESTS)
   # Can use --gtest_filter option to run specific tests.
   add_executable(${PROJECT_NAME}_test ${TEST_SOURCES} ./gtest/gtest-all.cc)
   target_link_libraries(${PROJECT_NAME}_test
-    ${PROJECT_NAME}
+    ${PROJECT_NAME}_player
     ${PROJECT_NAME}_cfr
     pthread)
   set_target_properties(${PROJECT_NAME}_test PROPERTIES COMPILE_FLAGS "-std=c++11")
