Large abstraction ready

--- a/bot/pokerbots_cpp/CMakeLists.txt
+++ b/bot/pokerbots_cpp/CMakeLists.txt
@@ -80,6 +80,12 @@ if(BUILD_CFR_EXECUTABLES)
   target_link_libraries(cfr_medium
     ${Boost_LIBRARIES}
     ${PROJECT_NAME}_cfr)
+
+  add_executable(cfr_large
+    cfr_main_large.cpp)
+  target_link_libraries(cfr_large
+    ${Boost_LIBRARIES}
+    ${PROJECT_NAME}_cfr)
 endif()
 
 # Optionally build the python wrappers.
