--- a/bot/CMakeLists.txt
+++ b/bot/CMakeLists.txt
@@ -3,6 +3,8 @@ cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 project(pokerbots_cpp VERSION 0.1.0 LANGUAGES CXX)
 add_compile_options(-std=c++11)
 
+find_package(Boost REQUIRED COMPONENTS system program_options filesystem)
+
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
@@ -22,10 +24,11 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pokerbots_cpp/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pokerbots_cpp/OMPEval)
 add_executable(cpp_player
   cfr_player.cpp
-  cfr_player.hpp
+  # cfr_player.hpp
   main.cpp)
 target_link_libraries(cpp_player
   cpp_skeleton
+  ${Boost_LIBRARIES}
   ${PROJECT_NAME}_player
   ${PROJECT_NAME}_cfr)
 
