--- a/bot/CMakeLists.txt
+++ b/bot/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.0.0 FATAL_ERROR)
 project(pokerbots_cpp VERSION 0.1.0 LANGUAGES CXX)
 add_compile_options(-std=c++11)
 
-find_package(Boost REQUIRED COMPONENTS system program_options filesystem)
+# find_package(Boost REQUIRED COMPONENTS system program_options filesystem)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -17,18 +17,19 @@ add_subdirectory(./pokerbots_cpp)
 
 # Build the pure C++ bot.
 message(STATUS "Building the pure C++ bot")
-find_package(Boost REQUIRED COMPONENTS system program_options)
+# find_package(Boost REQUIRED COMPONENTS system program_options)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cpp_skeleton)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pokerbots_cpp/)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/pokerbots_cpp/OMPEval)
 add_executable(cpp_player
   cfr_player.cpp
-  # cfr_player.hpp
+  cfr_player.hpp
   main.cpp)
 target_link_libraries(cpp_player
   cpp_skeleton
-  ${Boost_LIBRARIES}
+  boost_filesystem
+  boost_program_options
   ${PROJECT_NAME}_player
   ${PROJECT_NAME}_cfr)
 
